--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @charset 'utf-8';
 
 html {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: 'Noto Sans KR', sans-serif;
   font-size: 14px;
 }
 
@@ -21,11 +21,19 @@ a {
 }
 
 .global-nav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 44px;
   padding: 0 1rem;
 }
 
 .local-nav {
+  position: absolute;
+  top: 45px;
+  left: 0;
+  width: 100%;
   height: 52px;
   padding: 0 1rem;
   border-bottom: 1px solid #ddd;
@@ -54,6 +62,7 @@ a {
   margin-left: 2em;
 }
 .scroll-section {
+  border: 3px solid red;
   padding-top: 50vh;
 }
 
