--- a/css/main.css
+++ b/css/main.css
@@ -75,9 +75,11 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  top: 35vh;
   margin: 5px 0;
   height: 3em; /* 현재 폰트사이즈의 비율로 높이 지정*/
   font-size: 2.5rem; /* 루트 엘리먼트의 폰트 사이즈 지율로 */
+  opacity: 0;
 }
 .main-message p {
   font-weight: bold;
@@ -150,7 +152,7 @@ a {
 .sticky-elem {
   display: none;
   position: fixed;
-  top: 0;
+  /* top: 0; */
   left: 0;
   width: 100%;
 }
