--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,16 @@ a {
   background-color: rgb(29, 29, 31);
 }
 
+#scroll-section-2 .b {
+  top: 10%;
+  left: 40%;
+}
+
+#scroll-section-2 .c {
+  top: 15%;
+  left: 45%;
+}
+
 .mid-message {
   max-width: 1000px;
   margin: 0 auto;
@@ -187,6 +197,16 @@ a {
   .desc-message {
     width: 20%;
   }
+
+  #scroll-section-2 .b {
+    top: 20%;
+    left: 53%;
+  }
+
+  #scroll-section-2 .c {
+    left: 55%;
+  }
+
   .mid-message {
     font-size: 4vw;
   }
